# frac-bio-embed

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md  embed.py  eval.py  hello.py  ingest.py  job-nrp.yaml  job.yaml  pyproject.toml  stratify.py  test_s3_write.py  train.py
results/: fractal_adapter_2L.txt  fractal_adapter_3L.txt  fractal_adapter_4L.txt
